# flatterer-lite

./: .gitignore  Cargo.toml  package.json
docs/: CNAME  index.html
docs/js/: about.74233075.js  about.74233075.js.map  app.9b18beed.js  app.9b18beed.js.map  chunk-vendors.d1aa8c43.js  chunk-vendors.d1aa8c43.js.map  flatterer_lite.js  flatterer_lite_bg.wasm.d.ts
public/: index.html
public/js/: README.md  flatterer_lite.d.ts  flatterer_lite.js  flatterer_lite_bg.wasm  flatterer_lite_bg.wasm.d.ts  package.json
src/: lib.rs
src/views/: About.vue  Home.vue
