[package]
name = "flatterer-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.83"
libflatterer = {path= "../libflatterer"}
wasm-bindgen-futures = "0.4.33"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_bytes = "0.11.7"
csv = "1.1.6"
serde_json = "1.0.86"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }
wasm-bindgen-console-logger = "0.1.1"
log = "0.4.17"
#rusqlite = {git = "https://github.com/trevyn/rusqlite", branch = "wasm32-unknown-unknown", features = ["bundled"]}

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console'
]

[lib]
crate-type = ["cdylib"]

